--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3000
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=http://localhost:5173,https://blogs-frontend-omega.vercel.app
 MONGO_URI=mongodb+srv://kanha_beep_db_user:RjWlquLu09OU4cKo@kanha-code.qx9zs9d.mongodb.net/blogs?retryWrites=true&w=majority&appName=Kanha-Code
 JWT_KEY=your_jwt_secret
